# device_board_bearpi

./: CODEOWNERS  OAT.xml  README.en.md  README.md  README_en.md  README_zh.md
bearpi_hm_micro/: BUILD.gn  README.md  ohos.build
bearpi_hm_micro/app/: bundle.json
bearpi_hm_micro/app/communication/: BUILD.gn
bearpi_hm_micro/app/launcher/: BUILD.gn
bearpi_hm_micro/app/screensaver/: BUILD.gn
bearpi_hm_micro/app/setting/: BUILD.gn
bearpi_hm_micro/docs/: README.md
bearpi_hm_micro/docs/device-dev/: BearPi-HM_Micro开发板介绍.md  BearPi-HM_Micro开发板编译调试.md  BearPi-HM_Micro开发环境搭建.md  如何在开发板上安装HAP应用.md  如何运行一个可执行程序.md  开发板Wi-Fi功能使用指导.md  编写一个hello_world程序.md  编写一个点亮LED灯程序.md  通过JS应用控制LED灯.md
bearpi_hm_micro/hal/display/: BUILD.gn  display_gralloc.c  display_layer.c
bearpi_hm_micro/hal/update/: BUILD.gn
bearpi_hm_micro/liteos_a/: BUILD.gn  config.gni
bearpi_hm_micro/liteos_a/board/: BUILD.gn  Makefile  target_config.h
bearpi_hm_micro/liteos_a/drivers/: BUILD.gn  Kconfig
bearpi_hm_nano/: BUILD.gn  README.en.md  README.md  bearpi_hm_nano_build.sh  ohos.build
bearpi_hm_nano/app/: BUILD.gn  README.md
bearpi_hm_nano/app/A1_kernal_thread/: BUILD.gn  README.md
bearpi_hm_nano/app/A2_kernel_timer/: BUILD.gn  README.md  timer_example.c
bearpi_hm_nano/app/A3_kernel_event/: BUILD.gn  README.md  event_example.c
bearpi_hm_nano/app/A4_kernel_mutex/: BUILD.gn  README.md
bearpi_hm_nano/app/A5_kernel_semaphore/: BUILD.gn  README.md
bearpi_hm_nano/app/A6_kernel_message/: BUILD.gn  README.md  message_example.c
bearpi_hm_nano/app/B1_basic_led_blink/: BUILD.gn  README.md
bearpi_hm_nano/app/B2_basic_button/: BUILD.gn  README.md
bearpi_hm_nano/app/B3_basic_pwm_led/: BUILD.gn  README.md
bearpi_hm_nano/app/B4_basic_adc/: BUILD.gn  README.md
bearpi_hm_nano/app/B5_basic_i2c_nfc/: BUILD.gn  README.md  i2c_example.c
bearpi_hm_nano/app/B6_basic_uart/: BUILD.gn  README.md  uart_example.c
bearpi_hm_nano/app/C1_e53_sf1_mq2/: BUILD.gn  README.md  e53_sf1_example.c
bearpi_hm_nano/app/C2_e53_ia1_temp_humi_pls/: BUILD.gn  README.md
bearpi_hm_nano/app/C3_e53_sc1_pls/: BUILD.gn  README.md
bearpi_hm_nano/app/C4_e53_sc2_axis/: BUILD.gn  README.md  e53_sc2_example.c
bearpi_hm_nano/app/C5_e53_is1_infrared/: BUILD.gn  README.md
bearpi_hm_nano/app/D10_iot_cloud_oc_infrared/: BUILD.gn  README.md  iot_cloud_oc_sample.c
bearpi_hm_nano/app/D10_iot_cloud_oc_infrared/include/: E53_IS1.h
bearpi_hm_nano/app/D10_iot_cloud_oc_infrared/src/: E53_IS1.c
bearpi_hm_nano/app/D11_iot_cloud_oc_agriculture/: BUILD.gn  README.md  iot_cloud_oc_sample.c
bearpi_hm_nano/app/D12_iot_cloud_oc_gps/: BUILD.gn  README.md  iot_cloud_oc_sample.c
bearpi_hm_nano/app/D1_iot_wifi_ap/: BUILD.gn  README.md  wifi_ap.c
bearpi_hm_nano/app/D6_iot_cloud_oc/: BUILD.gn  README.md  iot_cloud_oc_sample.c
bearpi_hm_nano/app/D6_iot_cloud_oc/include/: E53_IA1.h  oc_mqtt.h
bearpi_hm_nano/app/D6_iot_cloud_oc/src/: E53_IA1.c  oc_mqtt.c  wifi_connect.c
bearpi_hm_nano/config/: sdk.mk
bearpi_hm_nano/docs/: README.md
bearpi_hm_nano/iot_hardware_hals/: BUILD.gn
(+104 files in other folders)
