# Copyright (c) 2020 Nanjing Xiaoxiongpai Intelligent Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config_file = [ "../../third_party/libs/libiot_link.a" ]
copy("config") {
  sources = config_file
  outputs = [ "//out/bearpi_hm_nano/bearpi_hm_nano/libs/{{source_file_part}}" ]
}

static_library("cloud_oc_infrared") {
  sources = [
    "iot_cloud_oc_sample.c",
    "src/E53_IS1.c",
    "src/wifi_connect.c",
  ]

  include_dirs = [
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/board/bearpi/bearpi_hm_nano/iot_hardware_hals/include",
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    "//third_party/cJSON",
    "//device/board/bearpi/bearpi_hm_nano/third_party/iot_link/oc_mqtt/oc_mqtt_al",
    "//device/board/bearpi/bearpi_hm_nano/third_party/iot_link/oc_mqtt/oc_mqtt_profile_v5",
    "//device/board/bearpi/bearpi_hm_nano/third_party/iot_link/inc",
    "include",
  ]

  deps = [ ":config" ]
}
