# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config_file = [ "../../third_party/libs/libpahomqtt_static.a" ]
copy("config") {
  sources = config_file
  outputs = [ "//out/bearpi_hm_nano/bearpi_hm_nano/libs/{{source_file_part}}" ]
}

static_library("oc_mqtt") {
  sources = [
    "iot_cloud_oc_sample.c",
    "src/E53_IA1.c",
    "src/oc_mqtt.c",
    "src/oc_mqtt_profile_package.c",
    "src/wifi_connect.c",
  ]

  cflags = [ "-Wno-unused-variable" ]
  cflags += [ "-Wno-unused-but-set-variable" ]

  include_dirs = [
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//device/board/bearpi/bearpi_hm_nano/iot_hardware_hals/include",
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    "//third_party/cJSON",
    "include",
    "../../third_party/paho_mqtt/MQTTClient-C/src",
    "../../third_party/paho_mqtt/MQTTPacket/src",
  ]
  deps = [ ":config" ]
}
